--- a/templates/stats.html
+++ b/templates/stats.html
@@ -215,54 +215,67 @@
 <div id="chocolate-stats" class="red-border stats-div">
     <h2 class="section-title center">Chocolate Factory</h2>
 {% if chocolate_data != None and chocolate_data != {} %}
-    <p class="white-text">{{ chocolate_data }}</p>
 
-<div id="factory-production">
-<h3 class="white-text center">Chocolate production</h3>
-<p class="white-text">Factory Prestige: {{ chocolate_data['chocolate']['factory_level'] }}</p>
-<p class="white-text">Chocolate this prestige: {{ chocolate_data['chocolate']['prestige_chocolate'] }}</p>
-<p class="white-text">All-time chocolate: {{ chocolate_data['chocolate']['alltime_chocolate'] }}</p>
-<p class="white-text">Current chocolate: {{ chocolate_data['chocolate']['current_chocolate'] }}</p>
-</div>
+<div class="divider-2">
+    <div id="factory-production" class="blurry-bg">
+    <h3 class="white-text center">Chocolate production</h3>
+    <p class="">Factory Prestige: {{ chocolate_data['chocolate']['factory_level'] }}</p>
+    <p class="white-text">Chocolate this prestige: {{ chocolate_data['chocolate']['prestige_chocolate'] }}</p>
+    <p class="white-text">All-time chocolate: {{ chocolate_data['chocolate']['alltime_chocolate'] }}</p>
+    <p class="white-text">Current chocolate: {{ chocolate_data['chocolate']['current_chocolate'] }}</p>
+    </div>
+    <div id="factory-employees" class="blurry-bg">
+    <h3 class="white-text center">Rabbit employees</h3>
+        {% for rabbit in chocolate_data['employees'] %}
+        <div class="icon-text">
+            <img src="{{ chocolate_data['employees'][rabbit]['icon_path'] }}" alt="{{ rabbit }} icon" width="30" height="30">
+            <p class="white-text">
+                [{{ chocolate_data['employees'][rabbit]['level'] }}]
+                <span style="color: {{ chocolate_data['employees'][rabbit]['color'] }}">
+                    {{ rabbit.replace("_", " ").split()[0].capitalize() }} {{ rabbit.replace("_", " ").split()[1].capitalize() }}
+                </span>
 
-<div id="factory-employees">
-<h3 class="white-text center">Rabbit employees</h3>
-    {% for rabbit in chocolate_data['employees'] %}
-        <div class="blurry-bg">
-        <p class="white-text">[{{ chocolate_data['employees'][rabbit]['level'] }}]
-            <span style="color: {{ chocolate_data['employees'][rabbit]['color'] }}">
-                {{ rabbit.replace("_", " ").split()[0].capitalize() }} {{ rabbit.replace("_", " ").split()[1].capitalize() }}
-            </span>
-
-            (
-            <span style="color: {{ chocolate_data['employees'][rabbit]['color'] }}">
-                {{ chocolate_data['employees'][rabbit]['rank'] }}
-            </span>
-            )
-        </p>
+                (
+                <span style="color: {{ chocolate_data['employees'][rabbit]['color'] }}">
+                    {{ chocolate_data['employees'][rabbit]['rank'] }}
+                </span>
+                )
+            </p>
         </div>
-    {% endfor %}
+        {% endfor %}
+    </div>
 </div>
-<div id="factory-collection">
-<h3 class="white-text center">Hoppity's collection</h3>
-<p class="white-text">Found Rabbits: {{ chocolate_data['collection'].keys() | length }}/457</p>
-    <!-- TODO: Add a toggle div that displays each rabbit and duplicate counter (sortable by duplicate count)  -->
-<p class="white-text">Barn capacity: {{ chocolate_data['upgrades']['barn_slots'] }} (Tier {{ chocolate_data['upgrades']['barn'] }})</p>
+<br>
+<div class="divider-2">
+    <div id="factory-collection" class="blurry-bg">
+        <h3 class="white-text center">Hoppity's collection</h3>
+        <p class="white-text">Found Rabbits: {{ chocolate_data['collection'].keys() | length }}/457</p>
+            <!-- TODO: Add a toggle div that displays each rabbit and duplicate counter (sortable by duplicate count)  -->
+        <p class="white-text">Barn capacity: {{ chocolate_data['upgrades']['barn_slots'] }} (Tier {{ chocolate_data['upgrades']['barn'] }})</p>
+    </div>
+    <div id="factory-upgrades" class="blurry-bg">
+        <h3 class="white-text center">Factory upgrades</h3>
+        <p class="white-text">Hand-Baked Chocolate: {{ chocolate_data['upgrades']['click'] }}</p>
+        <p class="white-text">
+            Time Tower: {{ chocolate_data['upgrades']['tower'] }}
+            {% if chocolate_data['upgrades']['tower'] > 0 %}
+            	(x{{ chocolate_data['upgrades']['tower'] / 10 }} multiplier)
+            {% endif %}
+            {% if chocolate_data['misc']['shop_milestone'] >= 12 %}
+            	(+ x0.7 shop milestone 12)
+            {% endif %}
+        </p>
+        <p class="white-text">Rabbit Shrine: {{ chocolate_data['upgrades']['shrine'] }}</p>
+        <p class="white-text">Coach Jackrabbit: {{ chocolate_data['upgrades']['jackrabbit'] }}</p>
+    </div>
 </div>
-
-<div id="factory-upgrades">
-<h3 class="white-text center">Factory upgrades</h3>
-<p class="white-text">Hand-Baked Chocolate: {{ chocolate_data['upgrades']['click'] }}</p>
-<p class="white-text" data-tooltip="(Corresponding to a x{{ chocolate_data['upgrades']['tower'] / 10 }} multiplier)">Time Tower: {{ chocolate_data['upgrades']['tower'] }}</p>
-<p class="white-text">Rabbit Shrine: {{ chocolate_data['upgrades']['shrine'] }}</p>
-<p class="white-text">Coach Jackrabbit: {{ chocolate_data['upgrades']['jackrabbit'] }}</p>
-</div>
-
-<div id="factory-misc">
-<h3 class="white-text center">Other stats</h3>
-<p class="white-text">Chocolate spent in shop: {{ chocolate_data['misc']['shop_spent'] }} (milestone {{ chocolate_data['misc']['shop_milestone'] }})</p>
-<p class="white-text">Chocolate bar bought: {{ chocolate_data['misc']['chocolate_bar_counter'] }}</p>
-
+<br>
+<div class="divider-2">
+    <div id="factory-misc" class="blurry-bg">
+        <h3 class="white-text center">Other stats</h3>
+        <p class="white-text">Chocolate spent in shop: {{ chocolate_data['misc']['shop_spent'] }} (milestone {{ chocolate_data['misc']['shop_milestone'] }})</p>
+        <p class="white-text">Chocolate bar bought: {{ chocolate_data['misc']['chocolate_bar_counter'] }}</p>
+    </div>
 </div>
 
 {% else %}
