fix(chocolate-factory): Added color to the trophy fish rarity

--- a/templates/assets/stylesheet/style.css
+++ b/templates/assets/stylesheet/style.css
@@ -12,6 +12,25 @@
     font-style: normal;
 }
 
+:root {
+    --§4: #be0000;
+    --§c: #fe3f3f;
+    --§6: #d9a334;
+    --§e: #fefe3f;
+    --§2: #00be00;
+    --§a: #3ffe3f;
+    --§b: #3ffefe;
+    --§3: #00bebe;
+    --§1: #0000be;
+    --§9: #3f3ffe;
+    --§d: #fe3ffe;
+    --§5: #be00be;
+    --§f: #ffffff;
+    --§7: #bebebe;
+    --§8: #3f3f3f;
+    --§0: #000000;
+}
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -341,20 +360,20 @@ footer {
 
 .parenthesis::before {
     content: "(";
-    color: #7c7b7b;
+    color: var(--§8);
 }
 .parenthesis::after {
     content: ")";
-    color: #7c7b7b;
+    color: var(--§8);
 }
 
 .brackets::before {
     content: "[";
-    color: #7c7b7b;
+    color: var(--§8);
 }
 .brackets::after {
     content: "]";
-    color: #7c7b7b;
+    color: var(--§8);
 }
 
 @media screen and (max-width: 1020px) {
