fix(credits): Updated credits

--- a/templates/info.html
+++ b/templates/info.html
@@ -32,12 +32,16 @@
         <h2 class="white-text center">Credits</h2>
         <p class="white-text">Here are all the people who contributed to this project:</p>
         <ul id="credits-list">
+            <li class="white-text center">Individuals</li>
             <li class="white-text">GabHas - Project leader and developer (<a href="https://gabhas.fr/" target="_blank">website</a>)</li>
             <li class="white-text">Chris Bracco - Some CSS code (<a href="https://chrisbracco.com/" target="_blank">website</a>)</li>
             <li class="white-text">Zahkthar - Some Python code (<a href="https://zahkthar.fr/" target="_blank">website</a>)</li>
+            <li class="white-text center">Organisations</li>
+            <li class="white-text">Hypixel Skyblock Wiki - Information and assets (<a href="https://wiki.hypixel.net/" target="_blank">website</a>)</li>
+            <li class="white-text">Minecraft Heads - Assets (<a href="https://minecraft-heads.com/" target="_blank">website</a>)</li>
+            <li class="white-text">Minecraft Fandom Wiki- Assets (<a href="https://minecraft.fandom.com/wiki/Minecraft_Wiki" target="_blank">website</a>)</li>
         </ul>
         <br>
-        <p class="white-text">Most of the icons are from the <a href="https://wiki.hypixel.net/" target="_blank">Hypixel Skyblock wiki</a>.</p>
     </div>
     <br>
     <div id="legal" class="blurry-bg info-div">
