fix(trophy-fish): Added number formating

--- a/templates/assets/stylesheet/style.css
+++ b/templates/assets/stylesheet/style.css
@@ -352,6 +352,7 @@ footer {
     padding-bottom: 10px;
     padding-top: 10px;
     word-wrap: break-word;
+    border-radius: 5px;
 }
 
 #chocolate-stats .divider-2 > div > p,
