fix(rift): Icon is now displayed on the missing timecharms

--- a/templates/assets/stylesheet/style.css
+++ b/templates/assets/stylesheet/style.css
@@ -302,6 +302,12 @@ footer {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(2, 1fr);
+    grid-row-gap: 10px;
+    grid-column-gap: 10px;
+}
+
+.rift-trophy-div {
+    border-radius: 5px;
 }
 
 #trophy-fish-misc {
