--- a/templates/info.html
+++ b/templates/info.html
@@ -36,6 +36,7 @@
             <li class="white-text">GabHas - Project leader and developer (<a href="https://gabhas.fr/" target="_blank">website</a>)</li>
             <li class="white-text">Chris Bracco - Some CSS code (<a href="https://chrisbracco.com/" target="_blank">website</a>)</li>
             <li class="white-text">Zahkthar - Some Python code (<a href="https://zahkthar.fr/" target="_blank">website</a>)</li>
+            <li class="white-text">Mathys - The background trailer (<a href="https://fr.namemc.com/profile/M4THYS" target="_blank">namemc</a>)</li>
             <li class="white-text center">Organisations</li>
             <li class="white-text">Hypixel Skyblock Wiki - Information and assets (<a href="https://wiki.hypixel.net/" target="_blank">website</a>)</li>
             <li class="white-text">Minecraft Heads - Assets (<a href="https://minecraft-heads.com/" target="_blank">website</a>)</li>
@@ -47,7 +48,7 @@
     <div id="legal" class="blurry-bg info-div">
         <h2 class="white-text center">Terms & Conditions</h2>
         <h3 class="white-text center">Data collection</h3>
-        <p class="white-text">This website doesn't retain any data from its user.</p>
+        <p class="white-text center">This website doesn't retain any data from its user.</p>
         <h3 class="white-text center">License</h3>
         <p class="white-text center">This website and project is under the <a href="https://choosealicense.com/licenses/apache-2.0/" target="_blank">Apache License 2.0</a></p>
 
