fix(style): Adding icons and fixing toggle div

--- a/templates/stats.html
+++ b/templates/stats.html
@@ -236,7 +236,7 @@
         <p class="white-text">Factory Prestige: {{ chocolate_data['chocolate']['factory_level'] }}</p>
     </div>
     <div class="icon-text">
-        <img src="/images/Chocolate_Muffin.webp" alt="Prestique Chocolate" width="30" height="30">
+        <img src="/images/Chocolate_Muffin.webp" alt="Prestige Chocolate" width="30" height="30">
         <p class="white-text">Chocolate this prestige: {{ chocolate_data['chocolate']['prestige_chocolate'] }}</p>
     </div>
     <div class="icon-text">
